Instagram photos now visible on separate Profile (indicators bugged)

--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -106,6 +106,10 @@ body {
     background-image:  linear-gradient(262deg, rgb(255, 120, 84), rgb(253, 38, 125));
 }
 
+.blueGradient {
+    background-image:  linear-gradient(262deg, #00b2df, #0078da);
+}
+
 .superlikeCounter {
     position: absolute;
     text-align: center;
